Bug 8397 - Samba4 library crashes under certain conditions
Summary: Samba4 library crashes under certain conditions
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.0
Classification: Unclassified
Component: Other (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: samba4-qa@samba.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-24 01:10 UTC by aaron.small.99a
Modified: 2011-09-12 17:43 UTC (History)
0 users

See Also:


Attachments
Patch which fixes the crash (457 bytes, patch)
2011-08-24 01:10 UTC, aaron.small.99a
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description aaron.small.99a 2011-08-24 01:10:33 UTC
Created attachment 6801 [details]
Patch which fixes the crash

When I use the evolution mail client to connect to an exchange server, it crashes every time. To connect to the server, it uses evolution-mapi, which uses openchange, which uses samba4.

The backtrace indicates the crash occurred in part of the samba4 library: source4/lib/socket/interface.c:load_interface_list, in the talloc_free call. Stepping through the code, it appears that there were no network interfaces found, so ifaces was not allocated, and then a free was attempted on the invalid pointer. The attached patch fixes the crash.
Comment 1 Matthias Dieter Wallnöfer 2011-09-12 17:43:02 UTC
A slightly different version is on the way into our repo. It should be there in a hour or so.