s4:lib/socket/interface.c - "ifaces" strictly needs to be initialised

Please consider a failing "get_interfaces" call and the "talloc_free()"
operation on a possible uninitialised "ifaces" on line 326.

https://bugzilla.samba.org/show_bug.cgi?id=8397

Reviewed-by: Jelmer

Autobuild-User: Matthias Dieter Wallnöfer <mdw@samba.org>
Autobuild-Date: Mon Sep 12 23:49:12 CEST 2011 on sn-devel-104